...
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vuG-Vd-R84">
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="oDb-E4-4TD"/>
                                </constraints>
                                <items>
                                    <navigationItem id="DHn-dJ-DK1">
                                        <barButtonItem key="leftBarButtonItem" title="キャンセル" id="inn-w0-HQM">
                                            <connections>
                                                <segue destination="4VG-im-ibZ" kind="unwind" identifier="unwind" unwindAction="unwindToListManagementViewScreenWithSender:" id="76J-Vh-vpN"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="保存" id="YA2-v8-UC7">
                                            <connections>
                                                <action selector="saveButtonTapped:" destination="Ct4-s6-s8D" id="D1w-sb-2Xv"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
