...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--リスト-->
        <scene sceneID="Ncf-0d-UEJ">
            <objects>
                <tableViewController title="リスト" id="vDV-Im-vlK" customClass="ListViewController" customModule="Turmeric" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="H9G-rZ-9iK">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="listCell" textLabel="IYe-zE-jh4" style="IBUITableViewCellStyleDefault" id="hKw-KS-PZS">
...
                        <connections>
                            <outlet property="dataSource" destination="vDV-Im-vlK" id="Y0c-Io-Vcg"/>
                            <outlet property="delegate" destination="vDV-Im-vlK" id="f0q-WX-ls6"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="リスト" id="QgN-AV-nMy">
                        <barButtonItem key="rightBarButtonItem" title="追加・削除" id="Qki-tn-NeD">
                            <connections>
                                <segue destination="1HR-t8-bgk" kind="show" identifier="goManagement" animates="NO" id="81Q-l0-mhV"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
