...
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="iTM-W3-xrr" id="iNm-4W-MoT"/>
                                    <outlet property="delegate" destination="iTM-W3-xrr" id="6jg-gu-gnL"/>
                                </connections>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="リスト" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Co-9z-amy">
                                <accessibility key="accessibilityConfiguration" identifier="listNameLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
                            <constraint firstAttribute="trailing" secondItem="0Co-9z-amy" secondAttribute="trailing" id="fuL-gn-QNw"/>
                            <constraint firstItem="Eo2-Ea-PF9" firstAttribute="leading" secondItem="Ykf-1M-UZ0" secondAttribute="leading" id="lLT-sg-Qme"/>
                            <constraint firstItem="0Co-9z-amy" firstAttribute="centerY" secondItem="TFA-Lf-wY3" secondAttribute="centerY" id="xoH-am-ufP"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="bRm-dm-o81">
                        <barButtonItem key="rightBarButtonItem" title="編集" id="KDT-Hu-VTA">
                            <connections>
                                <segue destination="b94-PN-NKx" kind="show" identifier="goEdit" animates="NO" id="9Zh-b7-0l0"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
