<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RV0-rB-WZQ">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--List Edit View Controller-->
        <scene sceneID="mJh-H8-0Gp">
            <objects>
                <viewController id="RV0-rB-WZQ" customClass="ListEditViewController" customModule="Turmeric" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="eYe-1C-6h2"/>
                        <viewControllerLayoutGuide type="bottom" id="kHP-Jr-dPC"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="jlp-k5-XuQ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="リスト名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7T-OI-gT1">
                                <constraints>
                                    <constraint firstAttribute="width" constant="110" id="1yN-ZV-zw8"/>
                                    <constraint firstAttribute="height" constant="30" id="xhL-lq-gCC"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="friend" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="seq-kd-q7h">
                                <accessibility key="accessibilityConfiguration" identifier="listNameField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="rSY-He-jXg"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WOw-Zo-hUx">
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="e3W-Wu-9Sy">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e3W-Wu-9Sy" id="eRO-h3-RFn">
                                            <frame key="frameInset" width="375" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="RV0-rB-WZQ" id="bF3-sB-21c"/>
                                    <outlet property="delegate" destination="RV0-rB-WZQ" id="JpY-1Z-j5W"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kSB-AZ-1FJ">
                                <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                                <connections>
                                    <segue destination="aA3-X5-anM" kind="presentation" identifier="goAddMember" id="QBo-OS-07f"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ユーザ追加" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0C-uj-k7J">
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="WOw-Zo-hUx" firstAttribute="leading" secondItem="jlp-k5-XuQ" secondAttribute="leading" id="7z0-Di-3Ji"/>
                            <constraint firstItem="seq-kd-q7h" firstAttribute="leading" secondItem="L7T-OI-gT1" secondAttribute="trailing" constant="20" id="Ca9-b7-mG4"/>
                            <constraint firstItem="kSB-AZ-1FJ" firstAttribute="centerY" secondItem="n0C-uj-k7J" secondAttribute="centerY" id="Cqs-VI-yLW"/>
                            <constraint firstItem="seq-kd-q7h" firstAttribute="centerY" secondItem="L7T-OI-gT1" secondAttribute="centerY" id="Kq7-te-wuL"/>
                            <constraint firstItem="WOw-Zo-hUx" firstAttribute="top" secondItem="kSB-AZ-1FJ" secondAttribute="bottom" constant="5" id="OS3-PM-Hfd"/>
                            <constraint firstAttribute="trailing" secondItem="WOw-Zo-hUx" secondAttribute="trailing" id="SCC-yf-FIg"/>
                            <constraint firstAttribute="trailingMargin" secondItem="kSB-AZ-1FJ" secondAttribute="trailing" constant="5" id="SQx-jo-Z5x"/>
                            <constraint firstItem="kHP-Jr-dPC" firstAttribute="top" secondItem="WOw-Zo-hUx" secondAttribute="bottom" id="aqI-go-TkA"/>
                            <constraint firstItem="L7T-OI-gT1" firstAttribute="top" secondItem="eYe-1C-6h2" secondAttribute="bottom" constant="20" id="c2G-Ng-9Yq"/>
                            <constraint firstAttribute="trailingMargin" secondItem="seq-kd-q7h" secondAttribute="trailing" id="iwH-SG-Wvd"/>
                            <constraint firstItem="L7T-OI-gT1" firstAttribute="leading" secondItem="jlp-k5-XuQ" secondAttribute="leadingMargin" id="qWi-0p-Klt"/>
                            <constraint firstItem="kSB-AZ-1FJ" firstAttribute="top" secondItem="seq-kd-q7h" secondAttribute="bottom" constant="10" id="sBm-b3-SQX"/>
                            <constraint firstItem="kSB-AZ-1FJ" firstAttribute="leading" secondItem="n0C-uj-k7J" secondAttribute="trailing" constant="5" id="w2l-vg-WaN"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="OAM-lP-6ud">
                        <barButtonItem key="leftBarButtonItem" title="キャンセル" id="fkQ-PZ-8LZ">
                            <connections>
                                <segue destination="cjw-DI-CNq" kind="unwind" identifier="unwind" animates="NO" unwindAction="unwindToListDetailScreenWithSender:" id="90C-AF-yh6"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="保存" id="EfR-Yb-ngg">
                            <connections>
                                <action selector="updateButtonTapped:" destination="RV0-rB-WZQ" id="Tis-ni-8ba"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="listNameField" destination="seq-kd-q7h" id="bPj-ds-31v"/>
                        <outlet property="tableView" destination="WOw-Zo-hUx" id="XhU-bd-hoC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7Rz-8n-ifR" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <exit id="cjw-DI-CNq" userLabel="Exit" sceneMemberID="exit"/>
            </objects>
            <point key="canvasLocation" x="2178.4000000000001" y="184.85757121439281"/>
        </scene>
        <!--ListAddMember-->
        <scene sceneID="tnt-vp-JDL">
            <objects>
                <viewControllerPlaceholder storyboardName="ListAddMember" id="aA3-X5-anM" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="XxB-0S-u79" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2797" y="96"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="oJG-es-Xn9">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nFg-UX-RCq" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uIa-Fe-IJp">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="RV0-rB-WZQ" kind="relationship" relationship="rootViewController" id="K74-41-eFP"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="tvw-Ps-n7n" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1239.2" y="184.85757121439281"/>
        </scene>
    </scenes>
    <color key="tintColor" red="1" green="0.62745098040000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
</document>
