...
                                        <constraint firstItem="bTz-sg-riC" firstAttribute="leading" secondItem="xxU-IA-Sjj" secondAttribute="leadingMargin" constant="10" id="T4r-4X-a3c"/>
                                    </constraints>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                    </tableView>
                    <navigationItem key="navigationItem" title="リスト" id="BMB-Ol-9zC">
                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="u5z-Z6-yvY">
                            <connections>
                                <segue destination="nDy-pb-rmg" kind="presentation" id="1ad-uW-nPu"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="完了" id="z4d-VU-d6j">
                            <connections>
                                <action selector="completeButtonTapped:" destination="Mg8-VF-Vfm" id="E2g-ix-N7x"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
